services fixed spacing

--- a/less/freelancer.less
+++ b/less/freelancer.less
@@ -577,6 +577,30 @@ footer {
 	padding: 5px 5px 5px 0;
 }
 
+#services-list .service{
+	padding: 0 15px 20px 25px;
+}
+
+@media (min-width : 992px) {
+
+	#services-list .col-md-6:nth-child(1){
+		padding: 0;
+	}
+
+	#services-list .col-md-6:nth-child(2){
+		padding-right: 25px;
+	}
+
+	#services-list .row {
+		display: flex;
+		align-items: center;
+	}
+
+	#services-list .service{
+		padding: 0 30px;
+	}
+
+}
 
 #services .service{
 	max-width: 400px;
